--- a/wwwroot/styles/main.css
+++ b/wwwroot/styles/main.css
@@ -11,6 +11,14 @@ body {
   padding-top:10%;
 }
 
-#profile {
+#friendInput {
   width:70%;
+}
+
+.nav-link{
+  font-size: x-large;
+}
+
+.tabContent{
+  margin:5%;
 }
